# vcal-core

./: .gitignore  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE-Apache-2.0  NOTICE  README.md  deny.toml
benches/: criterion.rs  knn_vs_redis.rs
docs/: FAQ.md  api-basics.md  changelog.md  env.md  eviction.md  faq.md  install.md  intro.md  metrics.md  quickstart.md  snapshots.md
src/: errors.rs  graph.rs  lib.rs  math.rs  node.rs  params.rs  rand_level.rs  serialize.rs
